[package]
name = "sqlite_ui"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }
druid = { git = "https://github.com/linebender/druid", rev = "2c5d73c" }
druid-enums = { git = "https://github.com/finnerale/druid-enums", rev = "11a4660" }
tokio = "1.4.0"
crossbeam = "0.8.0"
log = "0.4.14"
anyhow = "1.0.40"
